<resources>
    <string name="app_name">Nikos</string>
    <string name="web_client_id">328118667550-co7dglp36t79pe15h18hdeqjsabl5537.apps.googleusercontent.com</string>
    <string name="profile">Profile</string>
    <string name="wallet">Wallet</string>
    <string name="logout">Log out</string>
    <string name="recent">Recent</string>
    <string name="see_more">See more</string>
    <string name="favorite">Favorite</string>
    <string name="amount">Amount</string>
    <string name="new_amount">New amount</string>
    <string name="total">TOTAL:</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>
    <string name="product">Product</string>
    <string name="details">Details</string>
    <string name="rp">Rp</string>
    <string name="end_of_list">End of list was reached.</string>
    <string name="dashboard">Dashboard</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="location">Location:</string>
    <string name="update">UPDATE</string>
    <string name="status">Status:</string>
    <string name="no_value">-</string>
    <string name="message">Message:</string>
    <string name="fine_location_permission_granted">Precise location access is allowed.</string>
    <string name="coarse_location_permission_granted">Approximate location access is allowed.</string>
    <string name="request_fine_location_permission_now">Change to precise location now!</string>
    <string name="click">Click</string>
    <string name="click_the_button">Click the button!</string>
    <string name="request_location_permission">Request location permission!</string>
    <string name="go_to_maps">Go to Maps</string>
    <string name="make_sure_gps_enabled">Make sure your GPS enabled.</string>
</resources>