<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".dashboard.DashboardFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circle_image_view"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="16sp"
        android:textColor="@color/nikos"
        android:textStyle="bold"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="@id/circle_image_view"
        app:layout_constraintTop_toTopOf="@id/circle_image_view"
        app:layout_constraintStart_toEndOf="@id/circle_image_view" />

    <ImageButton
        android:id="@+id/ib_add_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_add"
        app:backgroundTint="@color/nikos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/circle_image_view"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/favorite"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/nikos"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/tv_see_more_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_more"
                android:textColor="@color/pale_yellow"
                android:background="@drawable/bg_rounded_filled"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_favorite"
                app:layout_constraintBottom_toBottomOf="@id/tv_favorite"
                android:layout_marginEnd="16dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_favorite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_favorite" />

            <TextView
                android:id="@+id/tv_recent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/recent"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/nikos"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_favorite" />

            <TextView
                android:id="@+id/tv_see_more_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_more"
                android:textColor="@color/pale_yellow"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:background="@drawable/bg_rounded_filled"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_recent"
                app:layout_constraintBottom_toBottomOf="@id/tv_recent"
                android:layout_marginEnd="16dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_recent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                app:layout_constraintTop_toBottomOf="@id/tv_recent"
                android:layout_marginTop="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_of_list"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/nikos"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="160dp"
                app:layout_constraintTop_toBottomOf="@id/rv_recent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/pb_recent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>