<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".new_post.PostActivity">

    <ImageView
        android:id="@+id/iv_image_post"
        android:layout_width="0dp"
        android:layout_height="240dp"
        android:scaleType="centerCrop"
        android:src="@color/pale_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"
        android:adjustViewBounds="true" />

    <ImageButton
        android:id="@+id/ib_add_photo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_photo"
        app:layout_constraintTop_toTopOf="@id/iv_image_post"
        app:layout_constraintStart_toStartOf="@id/iv_image_post"
        app:layout_constraintEnd_toEndOf="@id/iv_image_post"
        app:layout_constraintBottom_toBottomOf="@id/iv_image_post"
        tools:ignore="ContentDescription" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_image_post">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/ib_save_pay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_save"
                    app:layout_constraintTop_toTopOf="@id/et_product_post"
                    app:layout_constraintBottom_toBottomOf="@id/et_product_post"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="20dp"
                    tools:ignore="ContentDescription" />

                <EditText
                    android:id="@+id/et_product_post"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/product"
                    android:inputType="textCapWords|textMultiLine"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="Autofill,LabelFor" />

                <EditText
                    android:id="@+id/et_detail_post"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/details"
                    android:inputType="textCapSentences|textMultiLine"
                    app:layout_constraintTop_toBottomOf="@id/et_product_post"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="Autofill,LabelFor" />

                <TextView
                    android:id="@+id/tv_rp_post"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_detail_post"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <EditText
                    android:id="@+id/et_amount_post"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/amount"
                    android:inputType="number"
                    app:layout_constraintTop_toTopOf="@id/tv_rp_post"
                    app:layout_constraintStart_toEndOf="@id/tv_rp_post"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/tv_rp_post"
                    tools:ignore="Autofill,LabelFor" />

                <ProgressBar
                    android:id="@+id/pb_post"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/ib_save_pay"
                    app:layout_constraintEnd_toEndOf="@id/ib_save_pay"
                    app:layout_constraintBottom_toBottomOf="@id/ib_save_pay"
                    app:layout_constraintStart_toStartOf="@id/ib_save_pay" />
                
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>